password reset fix

--- a/index/static/style.css
+++ b/index/static/style.css
@@ -974,6 +974,9 @@ input[type=checkbox] {
 }
 
 /* LOADERS */
+.loaders {
+  display: none;
+}
 .circle-loading {
   position: relative;
   border-radius: 50%;
