--- a/podcasts/templates/results_buttons.html
+++ b/podcasts/templates/results_buttons.html
@@ -93,6 +93,7 @@
   </a>
   {% endif %} {% if results.view == "last_played" %}
   <a class="btn-dope options-button" href="{% url 'last_played' %}">
+    Updated {% now "d-m-Y H:i" %}
     <i class="fas fa-sync" title="Update"></i>
   </a>
   {% endif %}
