--- a/index/static/style.css
+++ b/index/static/style.css
@@ -324,7 +324,7 @@ a:hover {
   margin: 20px 0;
 }
 .login-content {
-  margin: 20px 25px 0;
+  margin: 0 15px;
   height: 200px;
 }
 .login-content p {
