--- a/podcasts/templates/results_buttons.html
+++ b/podcasts/templates/results_buttons.html
@@ -22,15 +22,26 @@
       Reviews
     </a>
   {% endif %}
-  {% if results.view == "grid" or results.view == "list" %} {% if results.view == "grid" %}
-    <a class="btn-dope view-button active" href="{{ results.view_url }}">
-      <span data-view="list">
-        <i class="fas fa-th" title="Toggle View"></i>
-      </span>
-      <span class="d-none" data-view="grid">
-        <i class="fas fa-bars" title="Toggle View"></i>
-      </span>
+  {% if results.order == "rank" %}
+    <a class="btn-dope options-button active order-button" href="{{ results.order_url }}">
+      <span>123</span>
+      <span class="d-none">ABC</span>
     </a>
+  {% elif results.order == "name" %}
+    <a class="btn-dope options-button active order-button" href="{{ results.order_url }}">
+      <span class="d-none">123</span>
+      <span>ABC</span>
+    </a>
+  {% endif %}
+  {% if results.view == "grid" %}
+  <a class="btn-dope view-button active" href="{{ results.view_url }}">
+    <span data-view="list">
+      <i class="fas fa-th" title="Toggle View"></i>
+    </span>
+    <span class="d-none" data-view="grid">
+      <i class="fas fa-bars" title="Toggle View"></i>
+    </span>
+  </a>
   {% elif results.view == "list" %}
   <a class="btn-dope view-button active" href="{{ results.view_url }}">
     <span class="d-none" data-view="list">
@@ -40,7 +51,8 @@
       <i class="fas fa-bars" title="Toggle View"></i>
     </span>
   </a>
-  {% endif %} {% endif %} {% if results.alphabet %} {% if results.alphabet_nix_url %}
+  {% endif %}
+  {% if results.alphabet %} {% if results.alphabet_nix_url %}
   <a class="btn-dope exp exp-icon active" data-toggle="collapse" href="#alphabet-collapse-{{ results.view }}" aria-expanded="false"
     aria-controls="alphabet-collapse">
     {{ results.selected_q|capfirst }}
@@ -50,12 +62,12 @@
     A-Z
   </a>
   {% endif %} {% endif %} 
-  {% if results.selected_provider == "dopepod" %}
+  {% if results.provider == "dopepod" %}
     <a class="btn-dope options-button active provider-button" href="{{ results.provider_url }}">
       <span>dopepod</span>
       <span class="d-none">itunes</span>
     </a>
-  {% elif results.selected_provider == "itunes" %}
+  {% elif results.provider == "itunes" %}
     <a class="btn-dope options-button active provider-button" href="{{ results.provider_url }}">
       <span class="d-none">dopepod</span>
       <span>itunes</span>
