--- a/index/static/style.css
+++ b/index/static/style.css
@@ -59,7 +59,7 @@ a:hover {
   color: inherit;
   border: 2px solid rgb(0, 191, 165);
   min-width: 32px;
-  min-height: 32px;
+  height: 32px;
   padding: 3px 6px;
   cursor: pointer;
   font-weight: 600;
