--- a/index/static/style.css
+++ b/index/static/style.css
@@ -325,7 +325,7 @@ a:hover {
   margin: 20px 0;
 }
 .login-content {
-  margin: 0 15px;
+  margin: 20px 15px 0;
   height: 200px;
 }
 .login-content p {
