--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -53,12 +53,12 @@
                 </div>
               </div>
               <div class="form-row">
-                <div class="col">
+                <div class="col px-0">
                   <a class="password-link" href="/?view=password">
                     Forgot Password?
                   </a>
                 </div>
-                <div class="col">
+                <div class="col px-0">
                   <label class="dope-check-label">
                     <input class="dope-check" type="checkbox" name="remember" id="remember">
                     <span>
@@ -153,12 +153,12 @@
                 </div>
               </div>
               <div class="form-row">
-                <div class="col">
+                <div class="col px-0">
                   <a class="password-link" href="/?view=password">
                     Forgot Password?
                   </a>
                 </div>
-                <div class="col">
+                <div class="col px-0">
                   <label class="dope-check-label">
                     <input class="dope-check" type="checkbox" name="remember" id="remember">
                     <span>
@@ -246,12 +246,12 @@
                 </div>
               </div>
               <div class="form-row">
-                <div class="col">
+                <div class="col px-0">
                   <a class="password-link" href="/?view=password">
                     Forgot Password?
                   </a>
                 </div>
-                <div class="col">
+                <div class="col px-0">
                   <label class="dope-check-label">
                     <input class="dope-check" type="checkbox" name="remember" id="remember">
                     <span>
@@ -346,12 +346,12 @@
                 </div>
               </div>
               <div class="form-row">
-                <div class="col">
+                <div class="col px-0">
                   <a class="password-link" href="/?view=password">
                     Forgot Password?
                   </a>
                 </div>
-                <div class="col">
+                <div class="col px-0">
                   <label class="dope-check-label">
                     <input class="dope-check" type="checkbox" name="remember" id="remember">
                     <span>
