--- a/podcasts/templates/pagination.html
+++ b/podcasts/templates/pagination.html
@@ -1,4 +1,4 @@
-<div class="col-12 order-3 col-md-6 order-md-1 pages-buttons">
+<div class="col-12 order-3 col-lg-6 order-lg-1 pages-buttons">
   {% if results.start_url %}
     <a class="btn-dope options-button" href="{{ results.start_url }}">
       <i class="fas fa-angle-double-left" title="First Page"></i>
