--- a/index/static/style.css
+++ b/index/static/style.css
@@ -425,7 +425,7 @@ input[type=checkbox] {
   background: 0 0;
   top: 3px;
   left: 3px;
-  border: 3px solid #00bfa5;
+  border: 3px solid rgb(0, 191, 165);
   border-top: none;
   border-right: none;
   -webkit-transform: rotate(-45deg);
