--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -33,8 +33,8 @@
         {% include "last_played.min.html" %}
       {% elif results.view == "settings" %}
         {% include "settings.min.html" %}
-      {% elif results.view == "about" %}
-       {% include "about.min.html" %}
+      {% elif results.view == "api" %}
+       {% include "api.min.html" %}
       {% elif results.view == "privacy" %}
         {% include "privacy.min.html" %}    
       {% elif results.view == "terms" %}
