--- a/index/templates/footer.html
+++ b/index/templates/footer.html
@@ -2,16 +2,6 @@
   <div class="col-12 dope-wrapper">
     <ul>
       <li>
-        <a class="dopebar-link" href="//www.facebook.com/Dopepod-183565408908728">
-          <i class="fab fa-facebook-f" title="Facebook"></i>
-        </a>
-      </li>
-      <li>
-        <a class="dopebar-link" href="#">
-          <i class="fab fa-twitter" title="Twitter"></i>
-        </a>
-      </li>
-      <li>
         <a class="dopebar-link contact-link" href="{% url 'contact' %}">
           Contact
         </a>
@@ -24,6 +14,31 @@
       <li>
         <a class="dopebar-link terms-link" href="{% url 'terms' %}">
           Terms
+        </a>
+      </li>
+      <li>
+        <a class="dopebar-link api-link" href="{% url 'api' %}">
+          API
+        </a>        
+      </li>
+    </ul>
+    <p>
+      dopepod does not store any copyrighted files on its server. We only index and link to content provided by other sites.
+    </p>
+    <ul>
+      <li>
+        <a class="dopebar-link" href="//www.facebook.com/dopepod.me">
+          <i class="fab fa-facebook-f" title="Facebook"></i>
+        </a>
+      </li>
+      <li>
+        <a class="dopebar-link" href="//twitter.com/_dopepod_">
+          <i class="fab fa-twitter" title="Twitter"></i>
+        </a>
+      </li>
+      <li>
+        <a class="dopebar-link index-link" href="/">
+          dopepod © 2018
         </a>
       </li>
       <li>
@@ -41,13 +56,5 @@
         </form>
       </li>
     </ul>
-    <p>
-      dopepod does not store any copyrighted files on its server. We only index and link to content provided by other sites.
-    </p>
-    <p>
-      <strong>
-        dopepod 2018
-      </strong>
-    </p>
   </div>
 </div>
