--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -1,33 +1,33 @@
 <div class="container" {% if request.is_ajax %}data-theme="{{ user.profile.theme }}"{% endif %}>
   <div class="row">
     <div class="col-3 col-lg-5" id="dopebar-l">
-      <a class="dopebar-link d-inline-block d-xl-none" data-toggle="collapse" href="#dopebar-collapse" aria-expanded="false" aria-controls="results-collapse-{{ results.drop }}" aria-label="dopebar-collapse">
+      <a class="dope-link d-inline-block d-xl-none" data-toggle="collapse" href="#dopebar-collapse" aria-expanded="false" aria-controls="results-collapse-{{ results.drop }}" aria-label="dopebar-collapse">
         <i class="fas fa-bars" title="Expand"></i>
       </a>
       <ul class="d-none d-xl-inline-block">
         <li>
-          <a class="dopebar-link browse-link" href="{% url 'search' %}">
+          <a class="dope-link browse-link" href="{% url 'search' %}">
             Browse
           </a>
         </li>
         <li>
-          <a class="dopebar-link charts-link" href="#">
+          <a class="dope-link charts-link" href="#">
             Charts
           </a>
         </li>
         <li>
-          <a class="dopebar-link last-played-link" href="#">
+          <a class="dope-link last-played-link" href="#">
             Last played
           </a>
         </li>
         {% if user.is_authenticated %}
           <li>
-            <a class="dopebar-link subscriptions-link" href="{% url 'subscriptions' %}">
+            <a class="dope-link subscriptions-link" href="{% url 'subscriptions' %}">
               Subscriptions
             </a>
           </li>
           <li>
-            <a class="dopebar-link playlist-link" href="{% url 'playlist' %}">
+            <a class="dope-link playlist-link" href="{% url 'playlist' %}">
               Playlist
             </a>
           </li>
@@ -35,7 +35,7 @@
       </ul>
     </div>
     <div class="col-6 col-lg-2" id="dopebar-c">
-      <a class="dopebar-link index-link" href="/">
+      <a class="dope-link index-link" href="/">
         <h1>dopepod</h1>
       </a>
     </div>
@@ -43,43 +43,43 @@
       {% if user.is_authenticated %}
         <form class="logout-form d-inline-block d-xl-none" method="POST" action="{% url 'logout' %}">
           {% csrf_token %}
-          <button class="dopebar-link logout-link" type="submit">
+          <button class="dope-link logout-link" type="submit">
             <i class="fas fa-sign-out-alt" title="Logout"></i>
           </button>
         </form>
       {% else %}
-        <a class="dopebar-link login-link d-xl-none" href="/?view=login">
+        <a class="dope-link login-link d-xl-none" href="/?view=login">
           <i class="fas fa-sign-in-alt" title="Login"></i>
         </a>
       {% endif %}
       <ul class="d-none d-xl-inline-block">
         <li>
-          <a class="dopebar-link select-theme" href="#">
+          <a class="dope-link select-theme" href="#">
             <i class="fas fa-sun fa-lg" title="Select Theme"></i>
           </a>
         </li>
         {% if user.is_authenticated %}
           <li>
-            <a class="dopebar-link settings-link" href="{% url 'settings' %}">
+            <a class="dope-link settings-link" href="{% url 'settings' %}">
               Settings
             </a>
           </li>
           <li>
             <form class="logout-form" method="POST" action="{% url 'logout' %}">
               {% csrf_token %}
-              <button class="dopebar-link logout-link" type="submit">
+              <button class="dope-link logout-link" type="submit">
                 Logout
               </button>
             </form>
           </li>
         {% else %}
           <li>
-            <a class="dopebar-link login-link" href="/?view=login">
+            <a class="dope-link login-link" href="/?view=login">
               Login
             </a>
           </li>
           <li>
-            <a class="dopebar-link signup-link" href="/?view=signup">
+            <a class="dope-link signup-link" href="/?view=signup">
               Signup
             </a>
           </li>
@@ -95,59 +95,59 @@
           {% include "search-form.min.html" %}
         </li>
         <li>
-          <a class="dopebar-link select-theme" href="#">
+          <a class="dope-link select-theme" href="#">
             <i class="fas fa-sun fa-lg" title="Select Theme"></i>
           </a>
         </li>
       </ul>
       <ul>
         <li>
-          <a class="dopebar-link browse-link" href="{% url 'search' %}">
+          <a class="dope-link browse-link" href="{% url 'search' %}">
             Browse
           </a>
         </li>
         <li>
-          <a class="dopebar-link charts-link" href="#">
+          <a class="dope-link charts-link" href="#">
             Charts
           </a>
         </li>
         <li>
-          <a class="dopebar-link last-played-link" href="#">
+          <a class="dope-link last-played-link" href="#">
             Last played
           </a>
         </li>
         {% if user.is_authenticated %}
           <li>
-            <a class="dopebar-link subscriptions-link" href="{% url 'subscriptions' %}">
+            <a class="dope-link subscriptions-link" href="{% url 'subscriptions' %}">
               Subscriptions
             </a>
           </li>
           <li>
-            <a class="dopebar-link playlist-link" href="{% url 'playlist' %}">
+            <a class="dope-link playlist-link" href="{% url 'playlist' %}">
               Playlist
             </a>
           </li>
           <li>
-            <a class="dopebar-link settings-link" href="{% url 'settings' %}">
+            <a class="dope-link settings-link" href="{% url 'settings' %}">
               Settings
             </a>
           </li>
           <li>
             <form class="logout-form" method="POST" action="{% url 'logout' %}">
               {% csrf_token %}
-              <button class="dopebar-link logout-link" type="submit">
+              <button class="dope-link logout-link" type="submit">
                 Logout
               </button>
             </form>
           </li>
         {% else %}
           <li>
-            <a class="dopebar-link login-link" href="/?view=login">
+            <a class="dope-link login-link" href="/?view=login">
               Login
             </a>
           </li>
           <li>
-            <a class="dopebar-link signup-link" href="/?view=signup">
+            <a class="dope-link signup-link" href="/?view=signup">
               Signup
             </a>
           </li>
