--- a/index/templates/footer.html
+++ b/index/templates/footer.html
@@ -2,44 +2,24 @@
   <div class="col-12 dope-wrapper">
     <ul>
       <li>
-        <a class="dopebar-link contact-link" href="{% url 'contact' %}">
+        <a class="dope-link contact-link" href="{% url 'contact' %}">
           Contact
         </a>
       </li>
       <li>
-        <a class="dopebar-link privacy-link" href="{% url 'privacy' %}">
+        <a class="dope-link privacy-link" href="{% url 'privacy' %}">
           Privacy
         </a>
       </li>
       <li>
-        <a class="dopebar-link terms-link" href="{% url 'terms' %}">
+        <a class="dope-link terms-link" href="{% url 'terms' %}">
           Terms
         </a>
       </li>
       <li>
-        <a class="dopebar-link api-link" href="{% url 'api' %}">
+        <a class="dope-link api-link" href="{% url 'api' %}">
           API
         </a>        
-      </li>
-    </ul>
-    <p>
-      dopepod does not store any copyrighted files on its server. We only index and link to content provided by other sites.
-    </p>
-    <ul>
-      <li>
-        <a class="dopebar-link" href="//www.facebook.com/dopepod.me">
-          <i class="fab fa-facebook-f" title="Facebook"></i>
-        </a>
-      </li>
-      <li>
-        <a class="dopebar-link" href="//twitter.com/_dopepod_">
-          <i class="fab fa-twitter" title="Twitter"></i>
-        </a>
-      </li>
-      <li>
-        <a class="dopebar-link index-link" href="/">
-          dopepod © 2018
-        </a>
       </li>
       <li>
         <form action="//www.paypal.com/cgi-bin/webscr" method="post" target="_top">
@@ -49,11 +29,30 @@
           <input type="hidden" name="item_name" value="dopepod">
           <input type="hidden" name="no_note" value="0">
           <input type="hidden" name="currency_code" value="USD">
-          <button class="dopebar-link" type="submit">
+          <button class="dope-link" type="submit">
             Donate
-            <i class="fab fa-paypal"></i>
           </button>
         </form>
+      </li>
+    </ul>
+    <p>
+      dopepod does not store any copyrighted files on its server. We only index and link to content provided by other sites.
+    </p>
+    <ul>
+      <li>
+        <a class="dope-link index-link" href="/">
+          © 2018 dopepod
+        </a>
+      </li>
+      <li>
+        <a class="dope-link" href="//www.facebook.com/dopepod.me">
+          <i class="fab fa-facebook-f" title="Facebook"></i>
+        </a>
+      </li>
+      <li>
+        <a class="dope-link" href="//twitter.com/_dopepod_">
+          <i class="fab fa-twitter" title="Twitter"></i>
+        </a>
       </li>
     </ul>
   </div>
