--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -76,7 +76,7 @@
         <input type="hidden" name="item_name" value="dopepod">
         <input type="hidden" name="no_note" value="0">
         <input type="hidden" name="currency_code" value="USD">
-        <button class="dopebar-link" type="submit">
+        <button class="dope-link" type="submit">
           Donation
           <i class="fab fa-paypal"></i>
         </button>
