--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -6,9 +6,7 @@
     <div class="col-12 last-played-result">
       <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
         {% if episode.length %}
-        <span class="result-length">
-          {{ episode.length }}
-        </span>
+          <span class="result-length">{{ episode.length }}</span>
         {% endif %}
         <img class="img-fluid" src="//{{ episode.podcast.artworkUrl }}100x100bb.jpg"
         onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" />
@@ -18,83 +16,47 @@
       </button>
       <h1>
         <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
-          <strong>
-            {{ episode.podcast.title }}
-          </strong>
+          <strong>{{ episode.podcast.title }}</strong>
         </a>
       </h1>
       <h2>
-        <strong>
-          {{ episode.title }}
-        </strong>
+        <strong>{{ episode.title }}</strong>
       </h2>
       <ul class="dope-list">
         <li>
-          <span>
-            Released
-          </span>
-          <span>
-            {% if episode.pubDate %}{{ episode.pubDate|date:"d-m-Y H:i" }}{% else %}N/A{% endif %}
-          </span>
+          <span>Released</span>
+          {% if episode.pubDate %}
+            <span>{{ episode.pubDate|date:"d-m-Y H:i" }}</span>
+          {% else %}
+            <span>N/A</span>
+          {% endif %}
         </li>
         <li>
-          <span>
-            Played
-          </span>
-          <span>
-            {{ episode.played_ago }}
-          </span>
+          <span>Played</span>
+          <span>{{ episode.played_ago }}</span>
         </li>
       </ul>
       <div class="collapse fade last-played-collapse" id="last-played-collapse{{ forloop.counter }}">
         <ul class="dope-list">
           <li>
-            <span>
-              Length
-            </span>
-            <span>
-              {% if episode.length %}
-                {{ episode.length }}
-              {% else %}
-                N/A
-              {% endif %}
-            </span>
+            <span>Length</span>
+            <span>{% if episode.length %}{{ episode.length }}{% else %}N/A{% endif %}</span>
           </li>
           <li>
-            <span>
-              Size
-            </span>
-            <span>
-              {% if episode.size %}
-                {{ episode.size }}
-              {% else %}
-                N/A
-              {% endif %}
-            </span>
+            <span>Size</span>
+            <span>{% if episode.size %}{{ episode.size }}{% else %}N/A{% endif %}</span>
           </li>
           <li>
-            <span>
-              Genre
-            </span>
-            <span>
-              {{ episode.podcast.get_primary_genre }}
-            </span>
+            <span>Genre</span>
+            <span>{{ episode.podcast.get_primary_genre }}</span>
           </li>
           <li>
-            <span>
-              Language
-            </span>
-            <span>
-              {{ episode.podcast.language }}
-            </span>
+            <span>Language</span>
+            <span>{{ episode.podcast.language }}</span>
           </li>
           <li>
-            <span>
-              Subscribers
-            </span>
-            <span>
-              {{ episode.podcast.get_n_subscribers }}
-            </span>
+            <span>Subscribers</span>
+            <span>{{ episode.podcast.get_n_subscribers }}</span>
           </li>
         </ul>
         <p>
