--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -26,7 +26,7 @@
         <li>
           <span>Released</span>
           {% if episode.pubDate %}
-            <span>{{ episode.pubDate|date:"d-m-Y H:i" }}</span>
+            <span class="date" data-utc="{{ episode.pubDate|date:'U' }}">{{ episode.pubDate|date:"d-m-Y H:i" }}</span>
           {% else %}
             <span>N/A</span>
           {% endif %}
