--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -25,7 +25,7 @@
         <p>
           Last updated:
           {% if subscription.last_updated %}
-            <span>{{ subscription.last_updated|date:"d-m-Y H:i" }}</span>
+            <span class="date" data-utc="{{ episode.pubDate|date:'U' }}">{{ subscription.last_updated|date:"d-m-Y H:i" }}</span>
           {% else %}
             <span>Never</span>
           {% endif %}
